Update VSCode configuration.

--- a/VSCode/settings.json
+++ b/VSCode/settings.json
@@ -21,5 +21,8 @@
     "[json]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-    "breadcrumbs.enabled": false
+    "breadcrumbs.enabled": false,
+    "emmet.includeLanguages": {
+        "django-html": "html"
+    }
 }
